# hikvision-client

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  publish-to-test-pypi.yml
hikvisionapi/: __init__.py  hikvisionapi.py
